# django-deploymanager

./: README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
src/: djmanage.py
tests/: test_instance.py
